# artifacts

./: Cargo.toml  README.md  TODOS.md
core/: Cargo.toml
core/src/: combat.rs  cooldown.rs  ident.rs  lib.rs  machine.rs  map.rs  state.rs  step.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cooldown.rs  error.rs  lib.rs  machine.rs  map.rs  state.rs  step.rs
crates/driver/: Cargo.toml
crates/driver/src/: http.rs  lib.rs  mock.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: character.rs  lib.rs  live.rs  lua.rs  planner.rs  scheduler.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: farm_copper.rs  live_api.rs
docs/: ARCHITECTURE.md
fennel/lib/: actions.fnl  interp.fnl  predicates.fnl
fennel/workflows/: farm-chickens.fnl  farm-copper.fnl
plans/: FIGHT_SUPPORT.md  LSP_SUPPORT.md  TUI.md
src/: character.rs  data.rs  driver.rs  lib.rs  live.rs  lua.rs  main.rs  planner.rs  scheduler.rs  view.rs
src/driver/: http.rs  mock.rs
src/tui/: app.rs  event.rs  glyphs.rs  mod.rs  reducer.rs  run_worker.rs  skeleton.rs  theme.rs  ui.rs  workflows.rs
src/tui/widgets/: header.rs  inventory.rs  mod.rs  plan.rs  run.rs  stats.rs  workflows.rs
tests/: farm_copper.rs  live_api.rs  tui_alignment.rs
