[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/driver",
    "crates/runtime",
    "crates/cli",
    "crates/tests",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
