[package]
name = "artifacts-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artifacts"
path = "src/main.rs"

[dependencies]
artifacts-core = { path = "../core" }
artifacts-driver = { path = "../driver" }
artifacts-runtime = { path = "../runtime" }
anyhow = { workspace = true }
tokio = { workspace = true }
