[package]
name = "artifacts-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
artifacts-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"], optional = true }

[features]
# rustls-tls avoids a system OpenSSL dependency for reproducible builds.
http = ["tokio", "reqwest", "tokio/time"]
