[package]
name = "artifacts-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
artifacts-core = { path = "../core" }
artifacts-driver = { path = "../driver" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = "0.5"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
